prebuild components category

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -409,7 +409,7 @@
             "descripcionCorta":""
         },
         "dev-super-recursos":{
-            "nombre":"A large grouping of websites with a lot of resources",
+            "nombre":"Suggested compilation of websites and AI's",
             "referenciaBusqueda":"web pages, links",
             "descripcion":{
                 "tx1":"We don't know that certain websites exist until someone tells us how amazing they are and we get to them. This time we have on hand a compilation of some totally recommended websites."
