--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -413,7 +413,7 @@
             "descripcionCorta":""
         },
         "dev-super-recursos":{
-            "nombre":"Una gran agrupación de sitios web con muchos recursos",
+            "nombre":"Recopilación sugerida de sitios web e IA's",
             "referenciaBusqueda":"páginas web, links",
             "descripcion":{
                 "tx1":"No sabemos que existen ciertos sitios web hasta que alguien nos cuenta lo increíble que son y llegamos a ellos. Esta vez están a la mano un recopilación de unos sitios web recomendados totalmente."
