--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -975,56 +975,56 @@
                 "tx3": "Finances are a fundamental part of a developer's life. Salaries in development have been a good source of income, so it is vital to know how to manage them and it is also a good idea to invest them or use them to provide assistance that benefits both parties.",
                 "tx4": "I hope this is useful. If you have any questions or suggestions, please contact me using the contact form."
             },
-            "descripcionCorta": "Ways in which many people are currently generating income in a short period of time. Today's technology provides a favorable outlook when thinking about work or ways to earn extra money."
-        },
-        "ideas": {
-            "dropshiping": {
-                "nombre": "Dropshipping",
-                "descripcion": "Sell products without having your own inventory, using suppliers who ship directly to the customer."
-            },
-            "ventaProductosChinos": {
-                "nombre": "Selling Chinese products on the open market",
-                "descripcion": "Import products from China and sell them in your country, taking advantage of the price difference."
-            },
-            "perfilesGoogle": {
-                "nombre": "Organizing business profiles for Google searches for small businesses",
-                "descripcion": "Create and sell Google profiles optimized for local businesses, helping to improve their online visibility."
-            },
-            "aplicacionesMoviles": {
-                "nombre": "Create mobile applications",
-                "descripcion": "Desarrollar aplicaciones móviles y monetizarlas a través de publicidad o compras dentro de la app."
-            },
-            "inversionesFlipping": {
-                "nombre": "Inversiones flipping",
-                "descripcion": "Comprar propiedades o activos a bajo precio, renovarlos y venderlos a un precio más alto."
-            },
-            "verderRopaOlvidada": {
-                "nombre": "Vender ropa olvidada",
-                "descripcion": "Recoger ropa usada o olvidada y venderla en línea o en mercados locales."
-            },
-            "marketingAfiliados": {
-                "nombre": "Marketing de afiliados",
-                "descripcion": "Promocionar productos o servicios de otras empresas y ganar comisiones por cada venta realizada a través de tus enlaces."
-            },
-            "tiendaOnlinePropia": {
-                "nombre": "Tienda online propia",
-                "descripcion": "Crear una tienda en línea para vender productos propios o de terceros, utilizando plataformas como Shopify o WooCommerce."
-            },
-            "amazonFBA": {
-                "nombre": "Amazon FBA (Fulfillment by Amazon)",
-                "descripcion": "Vender productos a través de Amazon, donde ellos se encargan del almacenamiento, envío y atención al cliente."
-            },
-            "startup": {
-                "nombre": "Crear una startup",
-                "descripcion": "Desarrollar una idea innovadora y buscar financiamiento para lanzar un negocio desde cero."
-            },
-            "royaltiesFranquicia": {
-                "nombre": "Cobrar royalties por franquicias",
-                "descripcion": "Crear un modelo de negocio exitoso y cobrar royalties a otros emprendedores que deseen replicarlo."
-            },
-            "pinteres": {
-                "nombre": "Pinterest",
-                "descripcion": "Utilizar Pinterest para promocionar productos o servicios, generando tráfico y ventas a través.."
+            "descripcionCorta": "Ways in which many people are currently generating income in a short period of time. Today's technology provides a favorable outlook when thinking about work or ways to earn extra money.",
+            "ideas": {
+                "dropshiping": {
+                    "nombre": "Dropshipping",
+                    "descripcion": "Sell products without having your own inventory, using suppliers who ship directly to the customer."
+                },
+                "ventaProductosChinos": {
+                    "nombre": "Selling Chinese products on the open market",
+                    "descripcion": "Import products from China and sell them in your country, taking advantage of the price difference."
+                },
+                "perfilesGoogle": {
+                    "nombre": "Organizing business profiles for Google searches for small businesses",
+                    "descripcion": "Create and sell Google profiles optimized for local businesses, helping to improve their online visibility."
+                },
+                "aplicacionesMoviles": {
+                    "nombre": "Create mobile applications",
+                    "descripcion": "Develop mobile applications and monetize them through advertising or in-app purchases."
+                },
+                "inversionesFlipping": {
+                    "nombre": "Investments flipping",
+                    "descripcion": "Buying properties or assets at a low price, renovating them, and selling them at a higher price."
+                },
+                "verderRopaOlvidada": {
+                    "nombre": "Sell forgotten clothes",
+                    "descripcion": "Collect used or forgotten clothing and sell it online or at local markets."
+                },
+                "marketingAfiliados": {
+                    "nombre": "Affiliate marketing",
+                    "descripcion": "Promote other companies' products or services and earn commissions for each sale made through your links."
+                },
+                "tiendaOnlinePropia": {
+                    "nombre": "Own online store",
+                    "descripcion": "Create an online store to sell your own products or those of third parties, using platforms such as Shopify or WooCommerce."
+                },
+                "amazonFBA": {
+                    "nombre": "Amazon FBA (Fulfillment by Amazon)",
+                    "descripcion": "Sell products through Amazon, where they handle storage, shipping, and customer service."
+                },
+                "startup": {
+                    "nombre": "Building a startup",
+                    "descripcion": "Develop an innovative idea and seek funding to launch a business from scratch."
+                },
+                "royaltiesFranquicia": {
+                    "nombre": "Collecting royalties for franchises",
+                    "descripcion": "Create a successful business model and charge royalties to other entrepreneurs who wish to replicate it."
+                },
+                "pinteres": {
+                    "nombre": "Pinterest",
+                    "descripcion": "Use Pinterest to promote products or services, generating traffic and sales through..."
+                }
             }
         },
         "ELECTRON": {
