--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -582,51 +582,51 @@
 			"descripcionCorta": "Formas en las que actualmente muchas personas estan generando ingresos en poco tiempo. La tecnología hoy en día entrega un panorama favorable a la hora de pensar en trabajo o formas de ganar platica extra.",
             "ideas":{
 				"dropshiping": {
-					"nombre": "Livraison directe",
+					"nombre": "1. Livraison directe",
 					"descripcion": "Vendre des produits sans avoir de stock propre, en faisant appel à des fournisseurs qui livrent directement au client."
 				},
 				"ventaProductosChinos": {
-					"nombre": "Vendre des produits chinois sur le marché libre",
+					"nombre": "2. Vendre des produits chinois sur le marché libre",
 					"descripcion": "Importer des produits depuis la Chine et les vendre dans votre pays, en tirant parti de la différence de prix."
 				},
 				"perfilesGoogle": {
-					"nombre": "Organiser les profils d'entreprise pour les recherches Google destinées aux petites entreprises",
+					"nombre": "3. Organiser les profils d'entreprise pour les recherches Google destinées aux petites entreprises",
 					"descripcion": "Créer et vendre des profils Google optimisés pour les entreprises locales, contribuant ainsi à améliorer leur visibilité en ligne."
 				},
 				"aplicacionesMoviles": {
-					"nombre": "Créer des applications mobiles",
+					"nombre": "4. Créer des applications mobiles",
 					"descripcion": "Développer des applications mobiles et les monétiser grâce à la publicité ou aux achats intégrés à l'application."
 				},
 				"inversionesFlipping": {
-					"nombre": "Investissements retournement",
+					"nombre": "5. Investissements retournement",
 					"descripcion": "Acheter des biens immobiliers ou des actifs à bas prix, les rénover et les revendre à un prix plus élevé."
 				},
 				"verderRopaOlvidada": {
-					"nombre": "Vendre des vêtements oubliés",
+					"nombre": "6. Vendre des vêtements oubliés",
 					"descripcion": "Collecter des vêtements usagés ou oubliés et les vendre en ligne ou sur les marchés locaux."
 				},
 				"marketingAfiliados": {
-					"nombre": "Marketing d'affiliation",
+					"nombre": "7. Marketing d'affiliation",
 					"descripcion": "Promouvoir les produits ou services d'autres entreprises et gagner des commissions pour chaque vente réalisée via vos liens."
 				},
 				"tiendaOnlinePropia": {
-					"nombre": "Propre boutique en ligne",
+					"nombre": "8. Propre boutique en ligne",
 					"descripcion": "Créer une boutique en ligne pour vendre vos propres produits ou ceux de tiers, à l'aide de plateformes telles que Shopify ou WooCommerce."
 				},
 				"amazonFBA": {
-					"nombre": "Amazon FBA (Expédié par Amazon)",
+					"nombre": "9. Amazon FBA (Expédié par Amazon)",
 					"descripcion": "Vendre des produits via Amazon, qui se charge du stockage, de l'expédition et du service client."
 				},
 				"startup": {
-					"nombre": "Créer une start-up",
+					"nombre": "10. Créer une start-up",
 					"descripcion": "Développer une idée innovante et rechercher des financements pour lancer une entreprise à partir de zéro."
 				},
 				"royaltiesFranquicia": {
-					"nombre": "Cobrar royalties por franquicias",
+					"nombre": "11. Cobrar royalties por franquicias",
 					"descripcion": "Créer un modèle commercial performant et percevoir des redevances auprès d'autres entrepreneurs qui souhaitent le reproduire."
 				},
 				"pinteres": {
-					"nombre": "Pinterest",
+					"nombre": "12. Pinterest",
 					"descripcion": "Utiliser Pinterest pour promouvoir des produits ou des services, générer du trafic et des ventes via..."
 				}
 			}
