--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1003,31 +1003,31 @@
 					"descripcion": "Comprar propiedades o activos a bajo precio, renovarlos y venderlos a un precio más alto."
 				},
 				"verderRopaOlvidada": {
-					"nombre": "Vender ropa olvidada",
+					"nombre": "6. Vender ropa olvidada",
 					"descripcion": "Recoger ropa usada o olvidada y venderla en línea o en mercados locales."
 				},
 				"marketingAfiliados": {
-					"nombre": "Marketing de afiliados",
+					"nombre": "7. Marketing de afiliados",
 					"descripcion": "Promocionar productos o servicios de otras empresas y ganar comisiones por cada venta realizada a través de tus enlaces."
 				},
 				"tiendaOnlinePropia": {
-					"nombre": "Tienda online propia",
+					"nombre": "8. Tienda online propia",
 					"descripcion": "Crear una tienda en línea para vender productos propios o de terceros, utilizando plataformas como Shopify o WooCommerce."
 				},
 				"amazonFBA": {
-					"nombre": "Amazon FBA (Fulfillment by Amazon)",
+					"nombre": "9. Amazon FBA (Fulfillment by Amazon)",
 					"descripcion": "Vender productos a través de Amazon, donde ellos se encargan del almacenamiento, envío y atención al cliente."
 				},
 				"startup": {
-					"nombre": "Crear una startup",
+					"nombre": "10. Crear una startup",
 					"descripcion": "Desarrollar una idea innovadora y buscar financiamiento para lanzar un negocio desde cero."
 				},
 				"royaltiesFranquicia": {
-					"nombre": "Cobrar royalties por franquicias",
+					"nombre": "11. Cobrar royalties por franquicias",
 					"descripcion": "Crear un modelo de negocio exitoso y cobrar royalties a otros emprendedores que deseen replicarlo."
 				},
 				"pinteres": {
-					"nombre": "Pinterest",
+					"nombre": "12. Pinterest",
 					"descripcion": "Utilizar Pinterest para promocionar productos o servicios, generando tráfico y ventas a través.."
 				}
 			}
